// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Require > makeRequired > extracts the required fields 1`] = `
{
  "string": true,
  "stringNot": false,
  "stringNotDeclared": false,
}
`;

exports[`Require > makeRequired > extracts the required fields when deeply nested 1`] = `
{
  "deep": {
    "deeper": {
      "num": true,
    },
    "string": true,
    "stringNot": false,
    "stringNotDeclared": false,
  },
  "string": true,
  "stringNot": false,
  "stringNotDeclared": false,
}
`;
